--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+Flask==3.0.2
+Flask_Cors==4.0.0
+mysql_connector_repackaged==0.3.1
